Oh, the myriad hateful ways Java deals with lists and arrays...